[gd_scene load_steps=8 format=3 uid="uid://s5ua38rpxr00"]

[ext_resource type="Texture2D" uid="uid://4io7mp0kb36b" path="res://assets/escenas/salon/salonnosilonnoburbujero.png" id="1_jd4m2"]
[ext_resource type="Script" uid="uid://6l8ifmjnigxc" path="res://scripts/controles_esceneas/escena_redencion.gd" id="1_ufgt2"]
[ext_resource type="Texture2D" uid="uid://ct2dq6rw4umae" path="res://assets/escenas/salon/burbujeroenmano.png" id="3_dud41"]
[ext_resource type="AudioStream" uid="uid://c715cu1h0qjju" path="res://audio/balloon-pop-48030.mp3" id="4_2js6h"]
[ext_resource type="AudioStream" uid="uid://bb35qfcc4h6jp" path="res://audio/pop.wav" id="5_gdjjq"]
[ext_resource type="PackedScene" uid="uid://c12g2bruy7t" path="res://scenes/botonBurbuja.tscn" id="6_bvc3h"]
[ext_resource type="AudioStream" uid="uid://bfvn1kquy1eyx" path="res://audio/man-crying-3-184689.mp3" id="7_ddrvx"]

[node name="EscenaRedencion" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ufgt2")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_jd4m2")

[node name="BurbujeroMano" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Burbujero" type="TextureRect" parent="BurbujeroMano"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -336.0
offset_top = -283.0
offset_right = 807.0
offset_bottom = 360.0
grow_vertical = 2
texture = ExtResource("3_dud41")
expand_mode = 1

[node name="BaloonPop" type="AudioStreamPlayer2D" parent="BurbujeroMano"]
stream = ExtResource("4_2js6h")
volume_db = 19.338

[node name="PressButton" type="AudioStreamPlayer2D" parent="BurbujeroMano"]
position = Vector2(432, 354)
stream = ExtResource("5_gdjjq")

[node name="VBoxContainer" type="VBoxContainer" parent="BurbujeroMano"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -503.0
offset_top = -182.0
offset_right = -76.0
offset_bottom = 182.0
grow_horizontal = 0
grow_vertical = 2

[node name="TirarBurbujasBoton" parent="BurbujeroMano/VBoxContainer" instance=ExtResource("6_bvc3h")]
layout_mode = 2

[node name="Texto" parent="BurbujeroMano/VBoxContainer/TirarBurbujasBoton" index="0"]
text = "Tirar burbuja"

[node name="TirarBurbujasBoton2" parent="BurbujeroMano/VBoxContainer" instance=ExtResource("6_bvc3h")]
layout_mode = 2

[node name="Texto" parent="BurbujeroMano/VBoxContainer/TirarBurbujasBoton2" index="0"]
text = "No tirar burbuja"

[node name="FadeBlack" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MenCries" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ddrvx")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="BurbujeroMano/VBoxContainer/TirarBurbujasBoton" to="." method="_on_tirar_burbujas_boton_pressed"]

[editable path="BurbujeroMano/VBoxContainer/TirarBurbujasBoton"]
[editable path="BurbujeroMano/VBoxContainer/TirarBurbujasBoton2"]
